--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <meta name="author" content="">
 
   
-  <meta name="description" content="This Geeks in the Pub we will be at The Old Queens Head on Wednesday 4th October 2017 starting at 18:00 until 23:00ish. See you all there!
-">
+  <meta name="description" content="Geeks in the Pub">
   
 
   <!-- http://t.co/dKP3o1e -->
