Update About section and replace Twitter with Mastodon

--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@
     <div class="columns">
       <div class="column about-column">
         <h1>About GitPub</h1>
-        <p>Geeks in the Pub is a meeting of developers in Sheffield. We meet on the 1st Wednesday of every month at a different pub each month. You can find out about the next meeting at our <a href="http://twitter.com/GitPub_Shef">twitter</a>, also displayed to the right.</p>
-        <p>Geeks in the pub is organised by <a href="http://www.twitter.com/davidjmemmett">@davidjmemmett</a>, <a href="http://www.twitter.com/ClearCarbon">@ClearCarbon</a> and Cat.</p>
-	<p>We are currently conducting virtual events on our <a href='https://discord.com/invite/GjJYtaW'>Discord</a>. Watch our for annoucements via our twitter and <a href='https://discord.com/invite/GjJYtaW'>join our discord!</a>.
+        <p>Geeks in the Pub is a meeting of developers and engineers in Sheffield. We meet on the 1st Wednesday of every month at a different pub each month. You can find out about the next meeting at our <a href="https://mastodon.social/@gitpub">Mastodon</a>, also displayed to the right.</p>
+        <p>Geeks in the pub is organised by @davidjmemmett, @ClearCarbon and Jack.</p>
       </div>
       <div class="column">
         <div class='box card'>
-          <a class="twitter-timeline" data-height="800" data-theme="light"
-            href="https://twitter.com/GitPub_Shef?ref_src=twsrc%5Etfw">Tweets by GitPub_Shef</a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		  <iframe src="https://mastodon.social/@gitpub" title="GitPub Mastodon">
+		  </iframe>
         </div>
       </div>
     </div>
