Replace Mastodon iframe with new embed code

--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
       </div>
       <div class="column">
         <div class='box card'>
-		  <iframe src="https://mastodon.social/@gitpub" title="GitPub Mastodon">
-		  </iframe>
+          <iframe src="https://mastodon.social/@username/embed" 
+            class="mastodon-embed" 
+            style="max-width: 100%; border: 0" 
+            width="400"></iframe>
+          <script src="https://mastodon.social/embed.js" async="async"></script>
         </div>
       </div>
     </div>
