Add maxNbPostFetch and maxNbPostShow parameters

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                 timelineType: "profile",
                 userId: "109496353292929001",
                 profileName: "@gitpub",
+                maxNbPostFetch: "20",
+                maxNbPostShow: "5",
              });
           </script>
         </div>
